adjusts meta viewport info to prevent mobile horizontal scrolling

--- a/client/index.scss
+++ b/client/index.scss
@@ -12,10 +12,12 @@ html {
   margin: 0;
   height: 100%;
   overflow: hidden;
+  overflow-x: hidden;
 
 }
 
 body {
+  position: relative;
   font-family: 'Fira Sans' !important;
 
   a {
